[package]
name = "nvme-nostd"
version = "0.1.0"
edition = "2021"
authors = ["Matt Gates <suhteevah@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A #![no_std] NVMe driver in pure Rust — volatile MMIO registers, admin/IO command queues, PRP list management, and sector-level block device access"
repository = "https://github.com/suhteevah/nvme-nostd"
keywords = ["nvme", "storage", "no_std", "embedded", "bare-metal"]
categories = ["no-std", "hardware-support"]
readme = "README.md"

[dependencies]
log = { version = "0.4", default-features = false }
spin = { version = "0.9", default-features = false }
